--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -148,7 +148,7 @@
     <header>Payment Methods</header>
 
     <div class="icons">
-        <div class="icon">
+        <div class="icon" href="/payment" >
             <img src="https://cdn-icons-png.flaticon.com/512/179/179457.png" alt="Credit Card">
             <p>Credit/Debit Cards</p>
         </div>
