--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -148,10 +148,12 @@
     <header>Payment Methods</header>
 
     <div class="icons">
-        <div class="icon" href="/payment" >
+        <a href="/payment">
+        <div class="icon" >
             <img src="https://cdn-icons-png.flaticon.com/512/179/179457.png" alt="Credit Card">
             <p>Credit/Debit Cards</p>
         </div>
+        </a>
         <div class="icon">
             <img src="https://cdn-icons-png.flaticon.com/512/888/888870.png" alt="PayPal">
             <p>PayPal</p>
