--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -146,14 +146,14 @@
 
 <body>
     <header>Payment Methods</header>
-<a href="/payment">
+
     <div class="icons">
-        
+        <a href="/payment" class="icon-link">
         <div class="icon" >
             <img src="https://cdn-icons-png.flaticon.com/512/179/179457.png" alt="Credit Card">
             <p>Credit/Debit Cards</p>
         </div>
-            
+        </a>
         <div class="icon">
             <img src="https://cdn-icons-png.flaticon.com/512/888/888870.png" alt="PayPal">
             <p>PayPal</p>
@@ -171,7 +171,6 @@
             <p>UPI Payments</p>
         </div>
     </div>
-</a>
     <footer>
         <p>&copy; 2024 EcoHub. All rights reserved.</p>
         <p>
