--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -148,12 +148,12 @@
     <header>Payment Methods</header>
 
     <div class="icons">
-        <a href="/payment" class="icon-link">
+        
         <div class="icon" >
             <img src="https://cdn-icons-png.flaticon.com/512/179/179457.png" alt="Credit Card">
             <p>Credit/Debit Cards</p>
         </div>
-        </a>
+        <a href="/payment" > click here to payment gate way </a>
         <div class="icon">
             <img src="https://cdn-icons-png.flaticon.com/512/888/888870.png" alt="PayPal">
             <p>PayPal</p>
