--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -146,14 +146,27 @@
 
 <body>
     <header>Payment Methods</header>
-
+   <a href="/payment" style="
+  display: inline-block;
+  padding: 12px 24px;
+  background: linear-gradient(135deg, #4a00e0, #8e2de2);
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
+">
+  💳 Click to Pay
+</a>
     <div class="icons">
         
         <div class="icon" >
             <img src="https://cdn-icons-png.flaticon.com/512/179/179457.png" alt="Credit Card">
             <p>Credit/Debit Cards</p>
         </div>
-        <a href="/payment" > click here to payment gate way </a>
+        
         <div class="icon">
             <img src="https://cdn-icons-png.flaticon.com/512/888/888870.png" alt="PayPal">
             <p>PayPal</p>
