--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -146,20 +146,7 @@
 
 <body>
     <header>Payment Methods</header>
-   <a href="/payment" style="
-  display: inline-block;
-  padding: 12px 24px;
-  background: linear-gradient(135deg, #4a00e0, #8e2de2);
-  color: white;
-  text-decoration: none;
-  border-radius: 8px;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
-">
-  💳 Click to Pay
-</a>
+  
     <div class="icons">
         
         <div class="icon" >
@@ -187,7 +174,7 @@
     <footer>
         <p>&copy; 2024 EcoHub. All rights reserved.</p>
         <p>
-            <a href="/Return_Policy">Return Policy</a> |
+            <a href="/payment">Temporary payment</a> |
             <a href="/Service">Service</a> |
             <a href="/Home">Home</a>
         </p>
