--- a/public/Html/Payment_Methods.html
+++ b/public/Html/Payment_Methods.html
@@ -182,7 +182,7 @@
     <footer>
         <p>&copy; 2024 EcoHub. All rights reserved.</p>
         <p>
-            <a href="/ReturnPolicy">Return Policy</a> |
+            <a href="/payment">Payments</a> |
             <a href="/Service">Service</a> |
             <a href="/Home">Home</a>
         </p>
